syntax = "proto3";

package lilbattle.v1;

import "google/api/annotations.proto";
import "lilbattle/v1/models/filestore.proto";

option go_package = "github.com/turnforge/lilbattle/gen/go/lilbattle/v1/services";

// An interface to a filestore across various environments
service FileStoreService {
  /**
   * Create a LRO for indexing records
   */
  rpc PutFile(PutFileRequest) returns (PutFileResponse) {
    option (google.api.http) = {
      post: "/v1/files/{file.path=*}"
      body: "*",
    };
  }

  /**
   * Gets the metadata about a file
   */
  rpc GetFile(GetFileRequest) returns (GetFileResponse) {
    option (google.api.http) = {
      get: "/v1/files/{path=*}"
    };
  }

  /**
   * Deletes a file
   */
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse) {
    option (google.api.http) = {
      delete: "/v1/files/{path=*}"
    };
  }

  /**
   * Lists files in a directory
   */
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse) {
    option (google.api.http) = {
      get: "/v1/files"
    };
  }
}


